crates/bevy_reflect/compile_fail/tests/derive.rs
fn main() -> compile_fail_utils::ui_test::Result<()> {
    compile_fail_utils::test("reflect_derive", "tests/reflect_derive")
}
